2010-10-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Add tests for ‘co -p’ and ‘co -p -k’.

	* common-kn: New file.
	* t410: New file.
	* t430: New file.
	* Makefile.am (TESTS): Add t410, t430.
	(EXTRA_DIST): Add common-kn.

2010-10-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Add some more fake files.

	* fake/b.make (checkin): Take $4 as optional
	symbolic name; take $5 as optional other args.
	(1.9, 1.1.1.5, 1.6.1.2): Update call to ‘checkin’.
	* fake/b.d/WOW.cou: New file.
	* fake/b.d/ZOW.cou: New file.
	* fake/b.d/1115.cou: Regenerate.
	* fake/b.d/1612.cou: Regenerate.

2010-10-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] For t999 rlog testing, sort only the symbolic names.

	* t999: Sort only the symbolic names; specify ‘LANG=C’;
	revert to direct comparison for other rlog output lines.

2010-10-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Add some more fake files.

	* fake/b: New file.
	* fake/b.d: New directory.
	* fake/b.d/11,v: New file.
	* fake/b.d/11,vu: New file.
	* fake/b.d/11.ci: New file.
	* fake/b.d/11.col: New file.
	* fake/b.d/11.cou: New file.
	* fake/b.d/1111,v: New file.
	* fake/b.d/1111,vu: New file.
	* fake/b.d/1111.ci: New file.
	* fake/b.d/1111.col: New file.
	* fake/b.d/1111.cou: New file.
	* fake/b.d/1112,v: New file.
	* fake/b.d/1112,vu: New file.
	* fake/b.d/1112.ci: New file.
	* fake/b.d/1112.col: New file.
	* fake/b.d/1112.cou: New file.
	* fake/b.d/1113,v: New file.
	* fake/b.d/1113,vu: New file.
	* fake/b.d/1113.ci: New file.
	* fake/b.d/1113.col: New file.
	* fake/b.d/1113.cou: New file.
	* fake/b.d/1114,v: New file.
	* fake/b.d/1114,vu: New file.
	* fake/b.d/1114.ci: New file.
	* fake/b.d/1114.col: New file.
	* fake/b.d/1114.cou: New file.
	* fake/b.d/1115,v: New file.
	* fake/b.d/1115,vu: New file.
	* fake/b.d/1115.ci: New file.
	* fake/b.d/1115.col: New file.
	* fake/b.d/1115.cou: New file.
	* fake/b.d/1116,v: New file.
	* fake/b.d/1116,vu: New file.
	* fake/b.d/1116.ci: New file.
	* fake/b.d/1116.col: New file.